@@ -1,0 +1,52 @@
+# 
+# jMax
+# Copyright (C) 1994, 1995, 1998, 1999 by IRCAM-Centre Georges Pompidou, Paris, France.
+# 
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+# 
+# See file LICENSE for further informations on licensing terms.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+# 
+# Based on Max/ISPW by Miller Puckette.
+#
+# Authors: Maurizio De Cecco, Francois Dechelle, Enzo Maggi, Norbert Schnell.
+#
+
+JMAXDISTDIR=../..
+include $(JMAXDISTDIR)/Makefiles/Makefile.$(ARCH)
+
+all:
+	(cd src; $(MAKE) $@)
+.PHONY: all
+
+clean:
+	(cd src; $(MAKE) $@)
+.PHONY: clean
+
+install:
+	$(INSTALL_DIR) $(lib_install_dir)/packages/macosx
+	$(INSTALL_DATA) macosx.jpk $(lib_install_dir)/packages/macosx/macosx.jpk
+	$(INSTALL_DIR) $(lib_install_dir)/packages/macosx/lib/$(ARCH)/opt
+	( cd lib/$(ARCH)/opt ; $(INSTALL_LIB) libmacosx.so $(lib_install_dir)/packages/macosx/lib/$(ARCH)/opt/libmacosx.so )
+	$(INSTALL_DIR) $(lib_install_dir)/packages/macosx/help
+	( cd help; for f in *.jmax ; do $(INSTALL_DATA) $$f $(lib_install_dir)/packages/macosx/help/$$f ; done )
+.PHONY: install
+
+# The following line is a hack that installs the <package>.jpk file on all platforms
+# (this is so that you can load the sgidev package even if you are running the GUI
+# on Linux
+install-noarch:
+	$(INSTALL_DIR) $(lib_install_dir)/packages/macosx
+	$(INSTALL_DATA) macosx.jpk $(lib_install_dir)/packages/macosx/macosx.jpk
+.PHONY: install-noarch
