@@ -21,27 +21,18 @@
 # Based on Max/ISPW by Miller Puckette.
 #
 # Authors: Maurizio De Cecco, Francois Dechelle, Enzo Maggi, Norbert Schnell.
-
-PLATFORM:=macosx
-
-ARCH_PACKAGES=macosx
-
-CC := cc
-LD := cc
-RANLIB = ranlib
-ARCH_CFLAGS := -pipe -Wall -Wno-unused -DMACOSX
-#ARCH_LDFLAGS := -rdynamic
-LDSO = cc
-LDSOFLAGS = -bundle -undefined suppress
-
-CC_ALL_FLAG := -Xlinker -all_load
-CC_NONE_FLAG := 
-LD_ALL_FLAG = --whole-archive
-LD_NONE_FLAG = --no-whole-archive
-
-ARCH_OPT_CFLAGS := -O3 -funroll-loops 
-ARCH_OPT_LDFLAGS := 
-
-FTS_SYS_LIBS =
+#
 
 
+## package declaration
+package provide macosx
+
+# load dynamic libraries into the server
+global jmaxArch jmaxMode
+ucs load module macosx $dir/lib/$jmaxArch/$jmaxMode/libmacosx.so
+
+# summary and help patches
+helpSummary "MAC OS X summary" $dir/help/macosx.summary.jmax
+helpPatch halaudioport $dir/help/halaudioport.help.jmax
+
+post "package: macosx (MAC OS X objects)"
