@@ -1,0 +1,42 @@
+/*
+ * jMax
+ * Copyright (C) 1994, 1995, 1998, 1999 by IRCAM-Centre Georges Pompidou, Paris, France.
+ * 
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ * 
+ * See file LICENSE for further informations on licensing terms.
+ * 
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ * 
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
+ * 
+ * Based on Max/ISPW by Miller Puckette.
+ *
+ */
+
+#include <fts/fts.h>
+
+/******************************************************************************/
+/*                                                                            */
+/* Module declaration                                                         */
+/*                                                                            */
+/******************************************************************************/
+
+static void macosx_init(void);
+
+fts_module_t macosx_module = { "macosx", "MAC OS X objects", macosx_init, 0, 0};
+
+extern void macosxaudioport_config( void);
+
+static void macosx_init(void)
+{
+  macosxaudioport_config();
+}
