@@ -1,3 +1,7 @@
+2001-03-29  Francois Dechelle  <dechelle@lipari.ircam.fr>
+
+	* added package macosx, containing HAL audio port for Mac OS X
+
 2001-03-27  Norbert Schnell  <schnell@ligeti.ircam.fr>
 
 	* packages/ispw/src/sampling/tabpeek.c (ftl_tabpeek): fixed ugly
